DemoMyApp/src/objects/Opportunity_Finance__c.object
<CustomObject>
    <fields>
        <fullName>OP_Installment_Plan_Fee__c</fullName>
        <formula>Opportunity__r.Program__r.Installment_Plan_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Installment Plan Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Insurance_Provider__c</fullName>
        <formula>if( OP_Campus__c = &quot;San Francisco&quot;,if( Opportunity__r.Country_Of_Residence__c =&quot;United States&quot;,&quot;Aetna&quot;,&quot;Erika&quot;),if(OP_Campus__c = &quot;Boston&quot;, &quot;Aetna&quot;,&quot;Erika&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Insurance Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_MIB_Project_Management_Specialization__c</fullName>
        <formula>Opportunity__r.Program__r.MIB_Project_Management_Specialization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:MIB-Project Management Specialization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_MIM_Digital_Marketing_Specialization__c</fullName>
        <formula>Opportunity__r.Program__r.MIM_Digital_Marketing_Specialization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:MIM-Digital Marketing Specialization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Pre_Master_Program_6_mos__c</fullName>
        <formula>Opportunity__r.Program__r.Pre_Master_Program_6_mos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Pre-Master Program (6 mos)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Pre_Master_Program_9_months__c</fullName>
        <formula>Opportunity__r.Program__r.Pre_Master_Program_3_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Pre-Master Program (9 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Previous_Program__c</fullName>
        <formula>Opportunity__r.Previous_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP_Previous_Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Program__c</fullName>
        <formula>Opportunity__r.Program__r.Name</formula>
        <label>OP:Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Rotation_Deposit__c</fullName>
        <formula>Opportunity__r.Program__r.Rotation_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Rotation Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Shared_Double__c</fullName>
        <formula>Opportunity__r.Program__r.Shared_Twin_Annual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Shared/Twin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Single_6_months_visiting__c</fullName>
        <formula>Opportunity__r.Program__r.Single_6_months_visiting_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Single 6 months (visiting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Single_Child__c</fullName>
        <formula>Opportunity__r.Program__r.Single_Child_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Single &amp; Child</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Single_Spouse_2_Child__c</fullName>
        <formula>Opportunity__r.Program__r.Single_Spouse_2_Child_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Single &amp; Spouse &amp; 2 Child</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Single_Spouse_Child__c</fullName>
        <formula>Opportunity__r.Program__r.Single_Spouse_Child_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Single &amp; Spouse &amp; Child</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Single_Spouse_Insurance__c</fullName>
        <formula>Opportunity__r.Program__r.Single_Spouse_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Single &amp; Spouse Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Single__c</fullName>
        <formula>Opportunity__r.Program__r.Single_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Specialization_in_MDM_or_MFIN__c</fullName>
        <formula>Opportunity__r.Program__r.Specialization_in_MDM_or_MFIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Specialization in MDM or MFIN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_TA_Data_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field ensures that once the data is moved from Top Apply, that as long as this field is true,  the workflow rule will never again fire and wipe out the data moved from Top apply.</description>
        <label>OP:TA Data Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_Tool_Box_Case_Study_Amount__c</fullName>
        <formula>Opportunity__r.Program__r.Toolbox_Case_Study_Pack__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Tool Box &amp; Case Study Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Tuition_Fee__c</fullName>
        <formula>Opportunity__r.Program__r.Tuition_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Tuition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_UG_Analyst_Certificate__c</fullName>
        <formula>Opportunity__r.Program__r.UG_Analyst_Certificate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:UG Analyst Certificate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Finances</relationshipLabel>
        <relationshipName>Opportunity_Finances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Fee__c</fullName>
        <label>Partner Program Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Insurance_Fee_FS__c</fullName>
        <formula>Partner_Program_Insurance_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Program Insurance Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Insurance_Fee__c</fullName>
        <label>Partner Program Insurance Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_1st__c</fullName>
        <label>1st Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_2nd__c</fullName>
        <label>2nd Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_3rd__c</fullName>
        <label>3rd Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_4th__c</fullName>
        <label>4th Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_5th__c</fullName>
        <label>5th Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_6th__c</fullName>
        <label>6th Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_1st__c</fullName>
        <label>1st Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_2nd__c</fullName>
        <label>2nd Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_3rd__c</fullName>
        <label>3rd Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_4th__c</fullName>
        <label>4th Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_5th__c</fullName>
        <label>5th Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_6th__c</fullName>
        <label>6th Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <inlineHelpText>All students need to pay the first invoice 60 days before the program starts. Students on installment plan pay the 2nd invoice in January 2013, all others pay 2nd invoice 30 days before the program starts</inlineHelpText>
        <label>Payment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Currency__c</fullName>
        <formula>TEXT(Opportunity__r.Program__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Opportunity__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Approved_Date__c</fullName>
        <label>Refund Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Approved_by__c</fullName>
        <label>Refund Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Paid_Date__c</fullName>
        <label>Refund Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Paid__c</fullName>
        <label>Refund Paid</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Request_Amount__c</fullName>
        <label>Refund Request Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Refund</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Relocation_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relocation Guarantee (MIB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relocation_Scholarship_Amount_FS__c</fullName>
        <formula>Relocation_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relocation  Scholarship Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relocation_Scholarship_Amount__c</fullName>
        <label>Relocation Scholarship Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rotation_Deposit__c</fullName>
        <label>Rotation Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scholarship_Amount_FS__c</fullName>
        <formula>Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scholarship Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scholarship_Amount__c</fullName>
        <label>Scholarship Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialization_Fee_FS__c</fullName>
        <label>Specialization Fee OLD FS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialization_Fee_FS_new__c</fullName>
        <formula>Specialization_Fee_preFS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialization Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialization_Fee__c</fullName>
        <label>Specialization Fee OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialization_Fee_preFS__c</fullName>
        <formula>if( Specialization__c = &quot;Not Taken&quot;, 0,if( Specialization__c = &quot;Digital Marketing&quot;, Opportunity__r.Program__r.MIM_Digital_Marketing_Specialization__c,Opportunity__r.Program__r.MIB_Project_Management_Specialization__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialization Fee Pre-FS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <formula>if( Opportunity__r.Specialization_Taken__c =true, Opportunity__r.Specialization_Name__c,&quot;Not Taken&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization_in_MDM_or_MFIN__c</fullName>
        <label>Specialization in MDM or MFIN</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specializations__c</fullName>
        <label>Specializations</label>
        <picklist>
            <picklistValues>
                <fullName>MIM-Digital Marketing Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIB-Project Management Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MM-Digital Marketing Specialization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <externalId>true</externalId>
        <label>Student ID</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Resources_Activities__c</fullName>
        <label>Student Resources &amp; Activities</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_Deposit_Paid__c</fullName>
        <label>TA Deposit Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_First_Payment_Amount_Paid__c</fullName>
        <label>TA First Payment Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_Total_Financial_Aid_Amount__c</fullName>
        <label>TA Total Financial Aid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_Total_Tuition_Amount__c</fullName>
        <inlineHelpText>This value is the sum of Tuition_Fee__c  + Toolbox_Case_Study_Pack__c +  Student_Resources_Activities__c as they had been stored in Top Apply</inlineHelpText>
        <label>TA Total Tuition Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TC_Date__c</fullName>
        <label>T/C Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_finaid__c</fullName>
        <formula>(BLANKVALUE( Total_Financial_Aid_Amount__c , 0) * 0.5) + 
(BLANKVALUE( External_Financing_Subtotal__c , 0) * 0.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test finaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toolbox_Case_Study_Pack__c</fullName>
        <label>Toolbox &amp; Case Study Pack</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Due_FS__c</fullName>
        <formula>Total_Fees_Due_FS__c - Total_Financial_Aid_FS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Due_Amount__c</fullName>
        <formula>Total_Tuition_Amount__c  -  Deposit_Balance__c - Total_Financial_Aid_Amount__c - External_Financing_Subtotal__c- Adjustment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Due_FS__c</fullName>
        <formula>Total_Tuition_Amount__c + Insurance_Fee__c + Visa_Fee__c+   Specialization_Fee_FS_new__c+ Partner_Program_Fee__c + Partner_Program_Insurance_Fee__c + Installment_Plan_Fee__c - Adjustment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tuition &amp; Fees Due:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Financial_Aid_Amount__c</fullName>
        <formula>Scholarship_Amount__c + (If (CONTAINS(TEXT(GoEd_Financing_Status__c) , &quot;Complete application submitted&quot;), Go_Ed_Loan_Amount__c,0)) +  Dean_Scholarship_Amount__c +  Relocation_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Financial Aid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Financial_Aid_FS__c</fullName>
        <formula>Scholarship_Amount_FS__c + (If  (CONTAINS(TEXT(GoEd_Financing_Status__c) , &quot;Complete application submitted&quot;), Go_Ed_Loan_Amount__c,0)) +   Dean_Scholarship_Amount__c +   Relocation_Scholarship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Financial Aid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Financial_Aid__c</fullName>
        <label>Total Financial Aid</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments_Made__c</fullName>
        <formula>X1st_Payment_Amount_Paid__c + X2nd_Payment_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tuition_Amount__c</fullName>
        <formula>OP_Tuition_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tuition Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tuition_Fees_Amount_Paid__c</fullName>
        <label>Total Tuition &amp; Fees Amount Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Tuition Fee Payment, PtS 1st Payment, PtS 2nd Payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tuition_Balance_Due__c</fullName>
        <label>Tuition Balance Due</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuition_FeeB__c</fullName>
        <label>Tuition FeeB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuition_Fee__c</fullName>
        <label>Tuition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuition_Fees_Balance_Due__c</fullName>
        <formula>Deposit_Balance__c - (Total_Tuition_Fees_Amount_Paid__c+ Write_Off__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tuition &amp; Fees Balance Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuition_Fees_Bank_Wire_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuition &amp; Fees Bank Wire Receipt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuition_Year__c</fullName>
        <label>Tuition Year</label>
        <picklist>
            <picklistValues>
                <fullName>1st Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UG_Analyst_Certificate__c</fullName>
        <label>UG Analyst Certificate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UG_Duration_of_Stay__c</fullName>
        <label>UG Duration of Stay</label>
        <picklist>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UG_Housing_Amount_Received__c</fullName>
        <label>UG Housing Amount Received</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UG_Housing_Deadline__c</fullName>
        <label>UG Housing Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UG_Housing_Deposit_Paid_Date__c</fullName>
        <label>UG Housing Deposit Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UG_Housing_Due__c</fullName>
        <label>UG Housing Due</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UG_Room_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UG Room Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UG_Room_Request__c</fullName>
        <label>UG Room Request</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unlock_Student_Financial_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this allows the student to see their financial information on their account.</inlineHelpText>
        <label>Unlock Student Financial Information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_Payment_Forms__c</fullName>
        <label>CC Forms and Checks Collected</label>
        <picklist>
            <picklistValues>
                <fullName>Year 1 Cheques Collected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 1 CC Form Collected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visa_Fee__c</fullName>
        <label>Visa Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <label>Visa Type</label>
        <referenceTo>Visa_Fees__c</referenceTo>
        <relationshipLabel>Finances</relationshipLabel>
        <relationshipName>Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Write_Off_Approved_By__c</fullName>
        <label>Write Off Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Write_Off_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Write_Off_Date__c</fullName>
        <label>Write Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Write_Off__c</fullName>
        <label>Write-Off</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Writeoff</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1st_Payment_Amount_Paid__c</fullName>
        <label>1st Payment Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Payment_Pd_Date__c</fullName>
        <inlineHelpText>Date first payment was paid</inlineHelpText>
        <label>1st Payment Pd Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Payment_Amount_Paid__c</fullName>
        <label>2nd Payment Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Payment_Pd_Date__c</fullName>
        <inlineHelpText>Date 2nd payment was paid</inlineHelpText>
        <label>2nd Payment Pd Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p1__c</fullName>
        <formula>if(AND( if(text(Installment_Plan__c) &lt;&gt;&quot;FlexiPlan&quot;,true,false) ,  if(text(Installment_Plan__c) &lt;&gt;&quot;No FlexiPlan&quot;,true,false))=TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>p1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Finance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Opportunity__c</columns>
        <columns>Total_Tuition_Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Payment_Plan__c</columns>
        <columns>Tuition_Fee__c</columns>
        <columns>Toolbox_Case_Study_Pack__c</columns>
        <columns>Application_Fee__c</columns>
        <columns>Payment_Amount_1st__c</columns>
        <columns>Payment_Due_Date_1st__c</columns>
        <columns>X1st_Payment_Pd_Date__c</columns>
        <columns>Payment_Amount_2nd__c</columns>
        <columns>Payment_Due_Date_2nd__c</columns>
        <columns>X2nd_Payment_Pd_Date__c</columns>
        <columns>Deposit_Date_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Portal_Web_Finance</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Scholarship_Amount__c</columns>
        <columns>Application_Fee__c</columns>
        <columns>Deposit_Paid__c</columns>
        <columns>Desires_Installment_Plan__c</columns>
        <columns>Desires_Rotation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Opportunity_Finance__c.Top_Apply_Finance</value>
        </filters>
        <label>Portal /Web Finance Records</label>
    </listViews>
    <listViews>
        <fullName>Top_Apply_Finance_Records</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Scholarship_Amount__c</columns>
        <columns>Confirmation_Deposit__c</columns>
        <columns>Deposit_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_Finance__c.Top_Apply_Finance</value>
        </filters>
        <label>Top Apply Finance Records</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finances</pluralLabel>
    <recordTypes>
        <fullName>Portal_Web_Finance</fullName>
        <active>true</active>
        <label>Portal/Web Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Apply_Finance</fullName>
        <active>true</active>
        <description>This record type is used for the Finance Records that have come over from Top Apply</description>
        <label>Top Apply Finance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Confirm_Adjustment_on_change_Country</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(OP_Country__c )&amp;&amp; Confirm_Adjustment_for_Change_of_Country__c != TRUE</errorConditionFormula>
        <errorMessage>Please confirm that you have adjusted the Scholarship Amounts below after the Country has changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Digital_Marketing_Campuses</fullName>
        <active>false</active>
        <description>This validation rule will ensure that the Digital Marketing Specialization is only selected for MIM Programs on campuses where it is offered.</description>
        <errorConditionFormula>AND (
     CONTAINS(TEXT(Specializations__c),&apos;MIM-Digital Marketing Specialization&apos;),  
     OP_Program__c !=&apos;MIM-US-San Francisco&apos;,
     OP_Program__c !=&apos;MIM-UK-London&apos;
   )</errorConditionFormula>
        <errorMessage>The Digital Marketing Specialization is only offered with MIM Programs in San Francisco and London</errorMessage>
    </validationRules>
</CustomObject>